# bigpipe-cpp

./: CMakeLists.txt  README.md  main.cpp
acceptor/: acceptor.cpp  acceptor.hpp
base/: BlockingQueue.hpp  BoundedBlockingQueue.hpp  SignalHandler.hpp  ThreadPool.hpp
client/: async_client.hpp  circuit_breaker.hpp  client.h  healthStats.hpp  iclient.hpp  rate_limit.h
conf/: bigpipe.json
config/: config.hpp
kafka/: consumer.h  consumer.hpp  producer.hpp
proto/: acl.hpp  callresp.hpp  callstatus.hpp  reqbody.hpp  reqmsg.hpp
server/: acceptor.hpp  server.cpp  server.hpp
